# spelt-rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md
.github/: dependabot.yml
.github/workflows/: rust.yml
config/: app.ci.toml  app.example.toml
migrations/: 20250208221834_create_users_and_sessions.up.sql
src/: cli.rs  config.rs  error.rs  main.rs  test.rs
src/extractors/: authenticated_user.rs
src/middleware/: auth.rs  authenticator.rs  authenticator_fn.rs  mod.rs
src/models/: auth.rs  mod.rs
src/repo/: auth.rs
src/routes/: auth.rs  info.rs  mod.rs  rooms.rs
src/services/: auth.rs  events.rs  jwt.rs  mod.rs  rooms.rs
src/store/: auth.rs  events.rs  mod.rs  rooms.rs
src/store/pg/: auth.rs  events.rs  mod.rs  rooms.rs
