[package]
name = "spelt-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4.5.28", features = ["derive"] }
faker_rand = "0.1.1"
thiserror = "2.0.11"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = {  version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "derive", "macros", "migrate", "uuid", "time", "json", "bigdecimal"] }
toml = "0.8.20"
twelf = { version = "0.15.0", default-features = false, features = ["toml"] }
argon2 = "0.5.3"
