[package]
name = "spelt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
faker_rand = "0.1.1"
futures-util = "0.3.31"
jsonwebtoken = "9.3.1"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
surrealdb = { version = "2.2.1", features = ["kv-mem", "kv-rocksdb"] }
thiserror = "2.0.11"
tokio = "1.43.0"
toml = "0.8.20"
twelf = { version = "0.15.0", default-features = false, features = ["toml"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
assert_matches2 = "0.1.2"
